# search_engine_crawler

./: .gitignore  Cargo.toml  readme.md  schema.sql
src/: database.rs  fetch_page.rs  fetch_top_websites.rs  fetch_warc.rs  handle_warc.rs  helper_functions.rs  main.rs
src/fetch_warc/: database.rs  webpage.rs
src/handle_warc/: webpage.rs
