[package]
name = "web_search_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
env_logger = "0.11.3"
flate2 = "1.0.30"
html2text = "0.12.5"
indicatif = "0.17.8"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
scraper = "0.19.0"
serde_json = "1.0.117"
tokio = {version = "1.37.0", features = ["full"]}
