[package]
name = "web_search_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
colored = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
html5ever = "0.27.0"
indicatif = "0.17.8"
lazy_static = "1.4.0"
log = "0.4.21"
markup5ever_rcdom = "0.3.0"
num_cpus = "1.16.0"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
retry = "2.0.0"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
warc = "0.3.2"
whichlang = "0.1.0"
